# lab_automation_module_advanced-image-editor

./: .gitignore  README.md  build_and_copy.sh  pyproject.toml
docs/: INDEX.md
docs/architecture/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  LIBRARY_GUIDE.md  TECHNICAL_NOTES.md
docs/dev/: CODE_MODIFICATION_CHECKLIST.md  DEVELOPER_GUIDE.md  PLUGIN_GUIDE.md  SMART_SLIDER_GUIDE.md
docs/draft/: PROPOSED_README.md
docs/guide/: CROSS_PLATFORM_GUIDE.md  USER_GUIDE.md  VERIFICATION_GUIDE.md
scripts/: README.md
src/: advanced_image_editor.py
src/editor/: image_editor.py
src/plugins/super_resolution/: README.md
super_resolution/: README.md
