[project]
maintainers = [{ name = "AUTO Kobo headquarters" }]
name = "advanced_image_editor"
version = "1.1.0"
description = "Advanced Image Editor with Plugin System - カーブエディタ完全1:1マッピング対応の高度な画像編集アプリケーション"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TITManagement", email = "contact@titmanagement.com"}
]
keywords = [
    "image-processing", "gui", "plugins", "opencv", "customtkinter",
    "photo-editor", "filters", "image-enhancement", "python"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    # GUI Framework
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "aist-guiparts>=0.1.0",

    # Image Processing - クロスプラットフォーム対応
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "numpy>=2.2.6",

    # Scientific Computing
    "scipy>=1.10.0",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "filelock>=3.24.0",
    "fonttools>=4.61.1",
    "fsspec>=2026.2.0",
    "Jinja2>=3.1.6",
    "kiwisolver>=1.4.9",
    "MarkupSafe>=3.0.3",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "sympy>=1.14.0",
    "typing_extensions>=4.15.0",

    # Utilities
    "packaging>=26.0",
    "matplotlib>=3.8.0",

    # プラットフォーム固有の依存関係
    "platformdirs>=3.0.0",  # OS固有のディレクトリ管理
    "psutil>=5.9.0",        # システム情報取得（メモリ・CPU監視）

    # Deep Learning (Super Resolution)
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "realesrgan>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

performance = [
    "numba>=0.57.0",
]

# Windows固有の依存関係
windows = [
    "pywin32>=306; sys_platform=='win32'",
    "winsound; sys_platform=='win32'",
]

# macOS固有の依存関係  
macos = [
    "pyobjc-framework-Cocoa>=9.0; sys_platform=='darwin'",
]

# Linux固有の依存関係
linux = [
    "python-xlib>=0.33; sys_platform=='linux'",
]

[project.urls]
Homepage = "https://github.com/TITManagement/advanced-image-editor"
Repository = "https://github.com/TITManagement/advanced-image-editor"
Documentation = "https://github.com/TITManagement/advanced-image-editor#readme"
"Bug Reports" = "https://github.com/TITManagement/advanced-image-editor/issues"

[project.scripts]
advanced-image-editor = "advanced_image_editor:main"
aie = "advanced_image_editor:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg", "*.jpeg", "*.gif", "*.ico", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

# Cross-platform compatibility settings
[tool.setuptools]
py-modules = ["advanced_image_editor"]
platforms = ["any"]

[tool.metadata]
copyright = "AUTO kobo"
author = "Takaya Inoue"
